--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="edu.quinnipiac.hackathon.api.GEMINI_API_KEY"
+            android:value="${GEMINI_API_KEY}" />
+
     </application>
 
 </manifest>
